# Process-Scheduling-Simulator

./: CMakeLists.txt  main.cpp
headers/: Interface.h  Process.h  ProcessSet.h
headers/algorithm/: FCFS_Priority.h  RR_Priority.h  SRTN.h  TLQ.h
sources/: Interface.cpp  Process.cpp  ProcessSet.cpp
sources/algorithm/: FCFS_Priority.cpp  RR_Priority.cpp  SRTN.cpp  TLQ.cpp
